k8s_legacy/observability/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selmag-grafana-svc
  namespace: selmag
spec:
  selector:
    app: selmag-grafana
  ports:
    - name: http
      port: 3000
      targetPort: http
